Roller Level Bombs

--- a/Unreal Projects/Roller/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal Projects/Roller/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -126,9 +126,10 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 
 [MRU]
 MRUItem0=/Game/RollingBP/Maps/Level3
-MRUItem1=/Game/RollingBP/Maps/Level1
+MRUItem1=/Game/RollingBP/Maps/Level4
 MRUItem2=/Game/RollingBP/Maps/Level2
-MRUItem3=/Game/RollingBP/Maps/RollingBPExampleMap
+MRUItem3=/Game/RollingBP/Maps/Level1
+MRUItem4=/Game/RollingBP/Maps/RollingBPExampleMap
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=False
@@ -159,8 +160,6 @@ LastLevel=/Game/RollingBP/Maps/Level3
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/RollingBP/Blueprints/HomingTurret.HomingTurret
-OpenAssetsAtExit=/Game/RollingBP/Blueprints/Bullet.Bullet
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -1311,24 +1310,55 @@ PropertyWrapper.Events=True
 EdGraphNode_Comment.GraphNodeDetail=True
 EdGraphNode_Comment.Comment=True
 HomingTurret_C.TransformCommon=True
+BombTurret_C.TransformCommon=True
+BombTurret_C.Pawn=True
+BombTurret_C.Camera=True
+BombTurret_C.Rendering=True
+BombTurret_C.Replication=True
+BombTurret_C.Collision=True
+BombTurret_C.Input=True
+BombTurret_C.Actor=True
+Bomb_C.Tick=True
+Bomb_C.Replication=True
+Bomb_C.Rendering=True
+Bomb_C.Collision=True
+Bomb_C.Actor=True
+Bomb_C.Input=True
+RadialForceComponent.Variable=True
+RadialForceComponent.TransformCommon=True
+RadialForceComponent.Sockets=True
+RadialForceComponent.RadialForceComponent=True
+RadialForceComponent.Impulse=True
+RadialForceComponent.Force=True
+RadialForceComponent.ComponentTick=True
+RadialForceComponent.Destructible=True
+RadialForceComponent.Rendering=True
+RadialForceComponent.Tags=True
+RadialForceComponent.ComponentReplication=True
+RadialForceComponent.Activation=True
+RadialForceComponent.Cooking=True
+RadialForceComponent.Events=True
+Bomb_C.TransformCommon=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/RollingBP/Blueprints/Bullet
+MRUItem0=/Game/RollingBP/Blueprints/PhysicsBallBP
 MRUItem1=/Game/RollingBP/Blueprints/HomingTurret
-MRUItem2=/Game/RollingBP/Blueprints/Platform_2
+MRUItem2=/Game/RollingBP/Blueprints/Bomb
 MRUItem3=/Game/RollingBP/Maps/Level3
-MRUItem4=/Game/RollingBP/Maps/Level1
+MRUItem4=/Game/RollingBP/Maps/Level4
 MRUItem5=/Game/RollingBP/Maps/Level2
-MRUItem6=/Game/RollingBP/Blueprints/Platform
-MRUItem7=/Game/RollingBP/Blueprints/Spin3
-MRUItem8=/Game/RollingBP/Blueprints/Spin4
-MRUItem9=/Game/RollingBP/Blueprints/Blue
-MRUItem10=/Game/RollingBP/Blueprints/Gray
-MRUItem11=/Game/RollingBP/Blueprints/Orange
-MRUItem12=/Game/RollingBP/Blueprints/Red
-MRUItem13=/Game/RollingBP/Blueprints/Green
-MRUItem14=/Game/RollingBP/Blueprints/PhysicsBallBP
-MRUItem15=/Game/RollingBP/Blueprints/Bowl
+MRUItem6=/Game/RollingBP/Blueprints/Bullet
+MRUItem7=/Game/RollingBP/Blueprints/Platform_2
+MRUItem8=/Game/RollingBP/Maps/Level1
+MRUItem9=/Game/RollingBP/Blueprints/Platform
+MRUItem10=/Game/RollingBP/Blueprints/Spin3
+MRUItem11=/Game/RollingBP/Blueprints/Spin4
+MRUItem12=/Game/RollingBP/Blueprints/Blue
+MRUItem13=/Game/RollingBP/Blueprints/Gray
+MRUItem14=/Game/RollingBP/Blueprints/Orange
+MRUItem15=/Game/RollingBP/Blueprints/Red
+MRUItem16=/Game/RollingBP/Blueprints/Green
+MRUItem17=/Game/RollingBP/Blueprints/Bowl
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1383,6 +1413,12 @@ Object=
 InterpToMovementComponent=
 MovementComponent=
 ActorComponent=
+StaticMeshComponent=
+MeshComponent=
+PrimitiveComponent=
+SceneComponent=
+PhysicsBallBP_C="\"Object.Actor.Tags\" "
+Pawn=
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bShowGrid=False
@@ -1405,14 +1441,17 @@ bUseUnsortedMenus=False
 /Game/RollingBP/Blueprints/Platform.Platform=1
 /Game/RollingBP/Blueprints/Platform_2.Platform_2=1
 /Game/RollingBP/Blueprints/Bullet.Bullet=1
-/Game/RollingBP/Blueprints/HomingTurret.HomingTurret=1
+/Game/RollingBP/Blueprints/HomingTurret.HomingTurret=0
+/Game/RollingBP/Blueprints/Bomb.Bomb=0
 
 [PlacementMode]
+RecentlyPlaced=/Game/RollingBP/Blueprints/Bomb.Bomb;
 RecentlyPlaced=/Game/RollingBP/Blueprints/HomingTurret.HomingTurret;
+RecentlyPlaced=/Game/RollingBP/Blueprints/BombTurret.BombTurret;
+RecentlyPlaced=/Game/RollingBP/Blueprints/Spin3.Spin3;
 RecentlyPlaced=/Game/RollingBP/Blueprints/Platform_2.Platform_2;
 RecentlyPlaced=/Game/RollingBP/Blueprints/Platform.Platform;
 RecentlyPlaced=/Game/RollingBP/Blueprints/Spin4.Spin4;
-RecentlyPlaced=/Game/RollingBP/Blueprints/Spin3.Spin3;
 RecentlyPlaced=/Game/RollingBP/Blueprints/Gray.Gray;
 RecentlyPlaced=/Game/RollingBP/Blueprints/Orange.Orange;
 RecentlyPlaced=/Game/RollingBP/Blueprints/Red.Red;
@@ -1425,6 +1464,7 @@ LastLogListing=PIE
 [DetailCategoriesAdvanced]
 TextRenderActor.Text=False
 Brush.BrushSettings=True
+PhysicsBallBP_C.Actor=True
 
 [PropertyWindowWidths]
 PropertyEditorToolkit_PinAsColumnHeader=24.000000
@@ -1491,4 +1531,28 @@ bMaterialQualityUsed[3]=0
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
+
+[/Script/UnrealEd.EditorLoadingSavingSettings]
+bSCCUseGlobalSettings=False
+bAutomaticallyCheckoutOnAssetModification=False
+AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
+bForceCompilationAtStartup=False
+bRestoreOpenAssetTabsOnRestart=False
+bMonitorContentDirectories=True
+AutoReimportThreshold=3.000000
+bAutoCreateAssets=True
+bAutoDeleteAssets=True
+bDetectChangesOnStartup=True
+bPromptBeforeAutoImporting=True
+bDeleteSourceFilesWithAssets=False
+
+[DetailCustomWidgetExpansion]
+StaticMeshComponent=StaticMeshComponent.Collision.Collision,
+SceneComponent=
+PhysicsBallBP_C=
+BP_Sky_Sphere_C=StaticMeshComponent.Collision.Collision,
+Bomb_C=
+K2Node_VariableGet=StaticMeshComponent.Collision.Collision,
+PropertyWrapper=StaticMeshComponent.Collision.Collision,
+HomingTurret_C=StaticMeshComponent.Collision.Collision,
 
