Boss Level Pt 2

--- a/Unreal Projects/Roller/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal Projects/Roller/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -170,6 +170,8 @@ LastLevel=/Game/RollingBP/Maps/Boss
 [AssetEditorSubsystem]
 CleanShutdown=True
 OpenAssetsAtExit=/Game/RollingBP/Blueprints/BossAI.BossAI
+OpenAssetsAtExit=/Game/RollingBP/Blueprints/GoodBomb.GoodBomb
+OpenAssetsAtExit=/Game/RollingBP/Blueprints/PhysicsBallBP.PhysicsBallBP
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -1406,7 +1408,7 @@ StaticMeshComponent.MaterialParameters=True
 StaticMeshComponent.HLOD=True
 StaticMeshComponent.Mobile=True
 PhysicsBallBP_C.LOD=False
-PhysicsBallBP_C.Cooking=False
+PhysicsBallBP_C.Cooking=True
 StaticMeshComponent.AssetUserData=True
 PawnSensingComponent.AssetUserData=False
 OLDBOSS_C.Default=True
@@ -1436,28 +1438,65 @@ Jump_C.Collision=True
 Jump_C.Actor=True
 Jump_C.Input=True
 Jump_C.TransformCommon=True
+Waypoints_C.TransformCommon=True
+Waypoints_C.Rendering=True
+Waypoints_C.Replication=True
+Waypoints_C.Collision=True
+Waypoints_C.Input=True
+Waypoints_C.Actor=True
+Waypoints_C.Tick=True
+Waypoints_C.Default=True
+GoodBombn_C.Tick=True
+GoodBombn_C.Replication=True
+GoodBombn_C.Rendering=True
+GoodBombn_C.Collision=True
+GoodBombn_C.Actor=True
+GoodBombn_C.Input=True
+RandomVector.Field=True
+RandomVector.Tags=True
+RandomVector.ComponentReplication=True
+RandomVector.Activation=True
+RandomVector.Variable=True
+RandomVector.Cooking=True
+GoodBomb_C.Tick=True
+GoodBomb_C.Default=True
+GoodBomb_C.Replication=True
+GoodBomb_C.Rendering=True
+GoodBomb_C.Collision=True
+GoodBomb_C.Actor=True
+GoodBomb_C.Input=True
+GoodBomb_C.TransformCommon=True
+Ground_C.Tick=True
+Ground_C.Pawn=True
+Ground_C.Camera=True
+Ground_C.Replication=True
+Ground_C.Rendering=True
+Ground_C.Collision=True
+Ground_C.Actor=True
+Ground_C.Input=True
+Ground_C.TransformCommon=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/RollingBP/Maps/Boss
-MRUItem1=/Game/RollingBP/Blueprints/Platform
-MRUItem2=/Game/RollingBP/Blueprints/BossAI
-MRUItem3=/Game/RollingBP/Blueprints/Jump
-MRUItem4=/Game/RollingBP/Blueprints/PhysicsBallBP
-MRUItem5=/Game/RollingBP/Blueprints/Wall
-MRUItem6=/Game/RollingBP/Maps/BOSSCOPY
-MRUItem7=/Game/RollingBP/Blueprints/Gray_2
-MRUItem8=/Game/RollingBP/Blueprints/Bomb
-MRUItem9=/Game/RollingBP/Blueprints/Spin3
-MRUItem10=/Game/RollingBP/Blueprints/OLDBOSS
-MRUItem11=/Game/RollingBP/Maps/Level1
-MRUItem12=/Game/RollingBP/Maps/Level4
-MRUItem13=/Game/RollingBP/Maps/Level5
-MRUItem14=/Game/RollingBP/Blueprints/HomingTurret
-MRUItem15=/Game/RollingBP/Blueprints/ai_states
-MRUItem16=/Game/RollingBP/Maps/Level4_2
-MRUItem17=/Game/RollingBP/Maps/Level3
-MRUItem18=/Game/RollingBP/Maps/Level2
-MRUItem19=/Game/RollingBP/Blueprints/Bullet
+MRUItem0=/Game/RollingBP/Blueprints/PhysicsBallBP
+MRUItem1=/Game/RollingBP/Blueprints/Ground
+MRUItem2=/Game/RollingBP/Maps/Boss
+MRUItem3=/Game/RollingBP/Blueprints/GoodBomb
+MRUItem4=/Game/RollingBP/Blueprints/BossAI
+MRUItem5=/Game/RollingBP/Blueprints/Red
+MRUItem6=/Game/RollingBP/Blueprints/GoodBombn
+MRUItem7=/Game/RollingBP/Blueprints/Platform_2
+MRUItem8=/Game/RollingBP/Blueprints/HomingTurret
+MRUItem9=/Game/RollingBP/Blueprints/Bullet
+MRUItem10=/Game/RollingBP/Blueprints/Waypoints
+MRUItem11=/Game/RollingBP/Blueprints/Platform
+MRUItem12=/Game/RollingBP/Blueprints/Jump
+MRUItem13=/Game/RollingBP/Blueprints/Wall
+MRUItem14=/Game/RollingBP/Maps/BOSSCOPY
+MRUItem15=/Game/RollingBP/Blueprints/Gray_2
+MRUItem16=/Game/RollingBP/Blueprints/Bomb
+MRUItem17=/Game/RollingBP/Blueprints/Spin3
+MRUItem18=/Game/RollingBP/Blueprints/OLDBOSS
+MRUItem19=/Game/RollingBP/Maps/Level1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1503,8 +1542,8 @@ QualityLevel=1
 
 [DetailPropertyExpansion]
 BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Volume=
-Brush=
+Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[60]\" "
 StreamableRenderAsset="\"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[60]\" "
@@ -1516,15 +1555,19 @@ StaticMeshComponent=
 MeshComponent=
 PrimitiveComponent=
 SceneComponent=
-PhysicsBallBP_C="\"Object.JumpImpulse\" "
-Pawn="\"Object.Default.WaypointArray\" "
+PhysicsBallBP_C=
+Pawn=
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-BossAI_C="\"Object.Default.WaypointArray\" "
+BossAI_C=
 Platform_C=
+Platform_2_C="\"Object.Duration\" "
+Waypoints_C="\"Object.Default.WaypointArray\" "
+GoodBomb_C=
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [AssetEditorToolkitTabLocation]
 /Game/RollingBP/Blueprints/Spin4.Spin4=1
@@ -1534,14 +1577,14 @@ bUseUnsortedMenus=False
 /Game/RollingBP/Maps/RollingBPExampleMap.RollingBPExampleMap:PersistentLevel.BoxBrush=1
 /Game/RollingBP/Blueprints/Bowl.Bowl=0
 /Game/RollingBP/Blueprints/Green.Green=1
-/Game/RollingBP/Blueprints/Red.Red=1
+/Game/RollingBP/Blueprints/Red.Red=0
 /Game/RollingBP/Blueprints/Orange.Orange=1
 /Game/RollingBP/Blueprints/Gray.Gray=1
 /Game/RollingBP/Blueprints/Blue.Blue=1
 /Game/RollingBP/Blueprints/Spin3.Spin3=0
 /Game/RollingBP/Blueprints/Platform.Platform=0
-/Game/RollingBP/Blueprints/Platform_2.Platform_2=1
-/Game/RollingBP/Blueprints/Bullet.Bullet=1
+/Game/RollingBP/Blueprints/Platform_2.Platform_2=0
+/Game/RollingBP/Blueprints/Bullet.Bullet=0
 /Game/RollingBP/Blueprints/HomingTurret.HomingTurret=0
 /Game/RollingBP/Blueprints/Bomb.Bomb=0
 /Game/RollingBP/Blueprints/ai_states.ai_states=0
@@ -1549,8 +1592,14 @@ bUseUnsortedMenus=False
 /Game/RollingBP/Blueprints/Gray_2.Gray_2=0
 /Game/RollingBP/Blueprints/Wall.Wall=0
 /Game/RollingBP/Blueprints/Jump.Jump=0
+/Game/RollingBP/Blueprints/Waypoints.Waypoints=0
+/Game/RollingBP/Blueprints/Ground.Ground=0
 
 [PlacementMode]
+RecentlyPlaced=/Game/RollingBP/Blueprints/Ground.Ground;
+RecentlyPlaced=/Game/RollingBP/Blueprints/GoodBomb.GoodBomb;
+RecentlyPlaced=/Game/RollingBP/Blueprints/Waypoints.Waypoints;
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/RollingBP/Blueprints/Jump.Jump;
 RecentlyPlaced=/Game/RollingBP/Blueprints/Wall.Wall;
 RecentlyPlaced=/Game/RollingBP/Blueprints/PhysicsBallBP.PhysicsBallBP;
@@ -1567,7 +1616,6 @@ RecentlyPlaced=/Game/RollingBP/Blueprints/Spin4.Spin4;
 RecentlyPlaced=/Game/RollingBP/Blueprints/Gray.Gray;
 RecentlyPlaced=/Game/RollingBP/Blueprints/Orange.Orange;
 RecentlyPlaced=/Game/RollingBP/Blueprints/Red.Red;
-RecentlyPlaced=/Game/RollingBP/Blueprints/Green.Green;
 
 [MessageLog]
 LastLogListing=PIE
@@ -1576,6 +1624,7 @@ LastLogListing=PIE
 TextRenderActor.Text=False
 Brush.BrushSettings=True
 PhysicsBallBP_C.Actor=True
+BossAI_C.Actor=True
 
 [PropertyWindowWidths]
 PropertyEditorToolkit_PinAsColumnHeader=24.000000
@@ -1660,23 +1709,30 @@ bDeleteSourceFilesWithAssets=False
 
 [DetailCustomWidgetExpansion]
 StaticMeshComponent=
-SceneComponent=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
+SceneComponent=
 PhysicsBallBP_C=
 BP_Sky_Sphere_C=StaticMeshComponent.Collision.Collision,
 Bomb_C=
 K2Node_VariableGet=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 PropertyWrapper=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
-HomingTurret_C=StaticMeshComponent.Collision.Collision,
+HomingTurret_C=
 Spin3_C=StaticMeshComponent.Collision.Collision,
-BossAI_C=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
+BossAI_C=
 K2Node_VariableSet=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 OLDBOSS_C=
 ai_mycontroller_C=StaticMeshComponent.Collision.Collision,
-CapsuleComponent=StaticMeshComponent.Collision.Collision,
-PlayerStart=StaticMeshComponent.Collision.Collision,
-Wall_C=StaticMeshComponent.Collision.Collision,
+CapsuleComponent=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
+PlayerStart=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
+Wall_C=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 Actor=StaticMeshComponent.Collision.Collision,
-Jump_C=StaticMeshComponent.Collision.Collision,
+Jump_C=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 InterpToMovementComponent=
 Platform_C=
+Waypoints_C=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
+Platform_2_C=
+BillboardComponent=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
+GoodBomb_C=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
+BrushComponent=StaticMeshComponent.Collision.Collision,
+Ground_C=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
+PawnSensingComponent=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 
