--- a/Unreal Projects/Roller/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal Projects/Roller/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -171,6 +171,8 @@ LastLevel=/Game/RollingBP/Maps/Boss
 CleanShutdown=True
 OpenAssetsAtExit=/Game/RollingBP/Blueprints/BossAI.BossAI
 OpenAssetsAtExit=/Game/RollingBP/Blueprints/GoodBomb.GoodBomb
+OpenAssetsAtExit=/Game/Rolling/Materials/PM_Ball.PM_Ball
+OpenAssetsAtExit=/Game/RollingBP/Blueprints/Waypoints.Waypoints
 OpenAssetsAtExit=/Game/RollingBP/Blueprints/PhysicsBallBP.PhysicsBallBP
 
 [PluginBrowser]
@@ -195,7 +197,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/colli/Documents/Repos/Fall2021/Unreal Projects/Roller/Content/RollingBP/Maps
+UNR=../../../../../../Users/10840430/Documents/GitHub/Fall2021/Unreal Projects/Roller/Content/RollingBP/Maps
 BRUSH=../../../../../../Users/10840430/Documents/GitHub/Fall2021/Unreal Projects/Roller/Content/
 FBX=../../../../../../Users/10840430/Documents/GitHub/Fall2021/Unreal Projects/Roller/Content/
 FBXAnim=../../../../../../Users/10840430/Documents/GitHub/Fall2021/Unreal Projects/Roller/Content/
@@ -1475,28 +1477,36 @@ Ground_C.Collision=True
 Ground_C.Actor=True
 Ground_C.Input=True
 Ground_C.TransformCommon=True
+Actor.Input=True
+ai_mycontroller_C.Tick=True
+ai_mycontroller_C.Cheat Manager=True
+ai_mycontroller_C.Controller=True
+PhysicalMaterial.PhysicalMaterial=True
+PhysicalMaterial.Advanced=True
+PhysicalMaterial.Destruction=True
+PhysicalMaterial.PhysicalProperties=True
 
 [ContentBrowserRecent]
 MRUItem0=/Game/RollingBP/Blueprints/PhysicsBallBP
-MRUItem1=/Game/RollingBP/Blueprints/Ground
-MRUItem2=/Game/RollingBP/Maps/Boss
-MRUItem3=/Game/RollingBP/Blueprints/GoodBomb
-MRUItem4=/Game/RollingBP/Blueprints/BossAI
-MRUItem5=/Game/RollingBP/Blueprints/Red
-MRUItem6=/Game/RollingBP/Blueprints/GoodBombn
-MRUItem7=/Game/RollingBP/Blueprints/Platform_2
-MRUItem8=/Game/RollingBP/Blueprints/HomingTurret
-MRUItem9=/Game/RollingBP/Blueprints/Bullet
-MRUItem10=/Game/RollingBP/Blueprints/Waypoints
-MRUItem11=/Game/RollingBP/Blueprints/Platform
-MRUItem12=/Game/RollingBP/Blueprints/Jump
-MRUItem13=/Game/RollingBP/Blueprints/Wall
-MRUItem14=/Game/RollingBP/Maps/BOSSCOPY
-MRUItem15=/Game/RollingBP/Blueprints/Gray_2
-MRUItem16=/Game/RollingBP/Blueprints/Bomb
-MRUItem17=/Game/RollingBP/Blueprints/Spin3
-MRUItem18=/Game/RollingBP/Blueprints/OLDBOSS
-MRUItem19=/Game/RollingBP/Maps/Level1
+MRUItem1=/Game/Rolling/Materials/PM_Ball
+MRUItem2=/Game/RollingBP/Blueprints/Waypoints
+MRUItem3=/Game/RollingBP/Blueprints/ai_mycontroller
+MRUItem4=/Game/RollingBP/Blueprints/ai_states
+MRUItem5=/Game/RollingBP/Maps/Boss
+MRUItem6=/Game/RollingBP/Maps/BOSSCOPY
+MRUItem7=/Game/RollingBP/Blueprints/GoodBomb
+MRUItem8=/Game/RollingBP/Blueprints/BossAI
+MRUItem9=/Game/RollingBP/Blueprints/Ground
+MRUItem10=/Game/RollingBP/Blueprints/Red
+MRUItem11=/Game/RollingBP/Blueprints/GoodBombn
+MRUItem12=/Game/RollingBP/Blueprints/Platform_2
+MRUItem13=/Game/RollingBP/Blueprints/HomingTurret
+MRUItem14=/Game/RollingBP/Blueprints/Bullet
+MRUItem15=/Game/RollingBP/Blueprints/Platform
+MRUItem16=/Game/RollingBP/Blueprints/Jump
+MRUItem17=/Game/RollingBP/Blueprints/Wall
+MRUItem18=/Game/RollingBP/Blueprints/Gray_2
+MRUItem19=/Game/RollingBP/Blueprints/Bomb
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1594,6 +1604,7 @@ bShowGrid=False
 /Game/RollingBP/Blueprints/Jump.Jump=0
 /Game/RollingBP/Blueprints/Waypoints.Waypoints=0
 /Game/RollingBP/Blueprints/Ground.Ground=0
+/Game/RollingBP/Blueprints/ai_mycontroller.ai_mycontroller=0
 
 [PlacementMode]
 RecentlyPlaced=/Game/RollingBP/Blueprints/Ground.Ground;
@@ -1625,6 +1636,7 @@ TextRenderActor.Text=False
 Brush.BrushSettings=True
 PhysicsBallBP_C.Actor=True
 BossAI_C.Actor=True
+StaticMeshComponent.Physics=False
 
 [PropertyWindowWidths]
 PropertyEditorToolkit_PinAsColumnHeader=24.000000
@@ -1708,23 +1720,23 @@ bPromptBeforeAutoImporting=True
 bDeleteSourceFilesWithAssets=False
 
 [DetailCustomWidgetExpansion]
-StaticMeshComponent=
+StaticMeshComponent=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 SceneComponent=
 PhysicsBallBP_C=
-BP_Sky_Sphere_C=StaticMeshComponent.Collision.Collision,
+BP_Sky_Sphere_C=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 Bomb_C=
 K2Node_VariableGet=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 PropertyWrapper=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 HomingTurret_C=
 Spin3_C=StaticMeshComponent.Collision.Collision,
-BossAI_C=
+BossAI_C=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 K2Node_VariableSet=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 OLDBOSS_C=
 ai_mycontroller_C=StaticMeshComponent.Collision.Collision,
-CapsuleComponent=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
+CapsuleComponent=
 PlayerStart=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 Wall_C=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
-Actor=StaticMeshComponent.Collision.Collision,
+Actor=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 Jump_C=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 InterpToMovementComponent=
 Platform_C=
