--- a/Unreal Projects/Roller/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal Projects/Roller/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -176,7 +176,7 @@ InstalledPlugins=XRVisualization
 
 [RootWindow]
 ScreenPosition=X=25.000 Y=212.000
-WindowSize=X=1893.000 Y=1030.000
+WindowSize=X=1893.000 Y=1022.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -193,7 +193,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/10840430/Documents/GitHub/Fall2021/Unreal Projects/Roller/Content/RollingBP/Maps
+UNR=../../../../../../Users/colli/Documents/Repos/Fall2021/Unreal Projects/Roller/Content/RollingBP/Maps
 BRUSH=../../../../../../Users/10840430/Documents/GitHub/Fall2021/Unreal Projects/Roller/Content/
 FBX=../../../../../../Users/10840430/Documents/GitHub/Fall2021/Unreal Projects/Roller/Content/
 FBXAnim=../../../../../../Users/10840430/Documents/GitHub/Fall2021/Unreal Projects/Roller/Content/
@@ -1044,10 +1044,10 @@ StaticMeshActor.Lighting=True
 StaticMeshActor.Rendering=True
 StaticMeshActor.Navigation=True
 StaticMeshActor.VirtualTexture=True
-StaticMeshActor.Tags=True
+StaticMeshActor.Tags=False
 StaticMeshActor.Cooking=True
 StaticMeshActor.Replication=True
-StaticMeshActor.Actor=True
+StaticMeshActor.Actor=False
 PhysicsBallBP_C.Default=True
 PhysicsBallBP_C.Tick=True
 PhysicsBallBP_C.Pawn=True
@@ -1923,26 +1923,35 @@ AIBoss_C.Replication=True
 AIBoss_C.Input=True
 AIBoss_C.Actor=True
 AIBoss_C.Tick=True
+CapsuleComponent.Events=True
+CapsuleComponent.Collision=True
+CapsuleComponent.ComponentTick=True
+AIBoss_C.SkeletalMesh=True
+AIBoss_C.Optimization=True
+AIBoss_C.MaterialParameters=True
+AIBoss_C.HLOD=True
+AIBoss_C.Mobile=True
+AIBoss_C.AssetUserData=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/RollingBP/Blueprints/AIBoss
-MRUItem1=/Game/RollingBP/Blueprints/GoodBomb
-MRUItem2=/Game/RollingBP/Blueprints/Pink
-MRUItem3=/Game/RollingBP/Blueprints/NormalBoss
-MRUItem4=/Game/RollingBP/Blueprints/CarelessBoss
-MRUItem5=/Game/RollingBP/Blueprints/SlowBoss
-MRUItem6=/Game/RollingBP/Maps/Boss
-MRUItem7=/Game/RollingBP/Blueprints/FastieBoss
-MRUItem8=/Game/RollingBP/Blueprints/Walls
-MRUItem9=/Game/RollingBP/Blueprints/Power
-MRUItem10=/Game/RollingBP/Blueprints/Gray_3
-MRUItem11=/Game/RollingBP/Blueprints/Ground
-MRUItem12=/Game/RollingBP/Blueprints/Wall
-MRUItem13=/Game/RollingBP/Blueprints/Volume
-MRUItem14=/Game/RollingBP/Blueprints/BossAI
-MRUItem15=/Game/RollingBP/Blueprints/Jump
-MRUItem16=/Game/RollingBP/Blueprints/Boss
-MRUItem17=/Game/RollingBP/Blueprints/PhysicsBallBP
+MRUItem0=/Game/RollingBP/Blueprints/PhysicsBallBP
+MRUItem1=/Game/RollingBP/Blueprints/Jump
+MRUItem2=/Game/RollingBP/Blueprints/Walls
+MRUItem3=/Game/RollingBP/Maps/Boss
+MRUItem4=/Game/RollingBP/Blueprints/AIBoss
+MRUItem5=/Game/RollingBP/Blueprints/GoodBomb
+MRUItem6=/Game/RollingBP/Blueprints/Pink
+MRUItem7=/Game/RollingBP/Blueprints/NormalBoss
+MRUItem8=/Game/RollingBP/Blueprints/CarelessBoss
+MRUItem9=/Game/RollingBP/Blueprints/SlowBoss
+MRUItem10=/Game/RollingBP/Blueprints/FastieBoss
+MRUItem11=/Game/RollingBP/Blueprints/Power
+MRUItem12=/Game/RollingBP/Blueprints/Gray_3
+MRUItem13=/Game/RollingBP/Blueprints/Ground
+MRUItem14=/Game/RollingBP/Blueprints/Wall
+MRUItem15=/Game/RollingBP/Blueprints/Volume
+MRUItem16=/Game/RollingBP/Blueprints/BossAI
+MRUItem17=/Game/RollingBP/Blueprints/Boss
 MRUItem18=/Game/RollingBP/Blueprints/Waypoints
 MRUItem19=/Game/Rolling/Materials/PM_Ball
 
@@ -2004,15 +2013,15 @@ MeshComponent=
 PrimitiveComponent=
 SceneComponent=
 PhysicsBallBP_C=
-Pawn=
+Pawn="\"Object.RunSpeed\" "
 NavMeshBoundsVolume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BossAI_C=
 Platform_C=
 Platform_2_C="\"Object.Duration\" "
 Waypoints_C="\"Object.Default.WaypointArray\" "
-GoodBomb_C=
+GoodBomb_C="\"Object.bosscount\" "
 Boss_C="\"Object.Moving\" "
-Character=
+Character="\"Object.RunSpeed\" "
 CharacterMovementComponent=
 PawnMovementComponent=
 NavMovementComponent=
@@ -2022,12 +2031,12 @@ SlowBoss_C="\"Object.Character.Mesh.Object.Rendering.CustomPrimitiveData\" \"Obj
 NormalBoss_C="\"Object.Character.Mesh.Object.Rendering.CustomPrimitiveData\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Rendering.CustomPrimitiveData\" \"Object.Actor.Tags\" "
 CarelessBoss_C="\"Object.Character.Mesh.Object.Rendering.CustomPrimitiveData\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Rendering.CustomPrimitiveData\" \"Object.Actor.Tags\" "
 Ground_C="\"Object.Actor.Tags\" "
-AIBoss_C=
+AIBoss_C="\"Object.RunSpeed\" "
+StaticMeshActor="\"Object.Actor.Tags\" "
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
-bShowGrid=False
 
 [AssetEditorToolkitTabLocation]
 /Game/RollingBP/Blueprints/Spin4.Spin4=1
@@ -2069,6 +2078,7 @@ bShowGrid=False
 /Game/RollingBP/Blueprints/Walls.Walls=0
 
 [PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/RollingBP/Blueprints/AIBoss.AIBoss;
 RecentlyPlaced=/Game/RollingBP/Blueprints/CarelessBoss.CarelessBoss;
 RecentlyPlaced=/Game/RollingBP/Blueprints/NormalBoss.NormalBoss;
@@ -2078,7 +2088,6 @@ RecentlyPlaced=/Game/RollingBP/Blueprints/Gray_3.Gray_3;
 RecentlyPlaced=/Game/RollingBP/Blueprints/Gray.Gray;
 RecentlyPlaced=/Game/RollingBP/Blueprints/NavVolume.NavVolume;
 RecentlyPlaced=/Game/RollingBP/Blueprints/PhysicsBallBP.PhysicsBallBP;
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
 RecentlyPlaced=/Game/RollingBP/Blueprints/Ground.Ground;
 RecentlyPlaced=/Game/RollingBP/Blueprints/GoodBomb.GoodBomb;
@@ -2184,31 +2193,31 @@ bPromptBeforeAutoImporting=True
 bDeleteSourceFilesWithAssets=False
 
 [DetailCustomWidgetExpansion]
-StaticMeshComponent=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,NavMeshBoundsVolume.Collision.Collision,
-SceneComponent=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,NavMeshBoundsVolume.Collision.Collision,FastieBoss_C.Rendering.TextureStreaming,FastieBoss_C.Rendering.LOD,FastieBoss_C.Physics.ConstraintsGroup,
+StaticMeshComponent=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,NavMeshBoundsVolume.Collision.Collision,FastieBoss_C.Rendering.TextureStreaming,FastieBoss_C.Rendering.LOD,FastieBoss_C.Physics.ConstraintsGroup,AIBoss_C.Physics.ConstraintsGroup,AIBoss_C.Rendering.TextureStreaming,AIBoss_C.Rendering.LOD,
+SceneComponent=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,NavMeshBoundsVolume.Collision.Collision,FastieBoss_C.Rendering.TextureStreaming,FastieBoss_C.Rendering.LOD,FastieBoss_C.Physics.ConstraintsGroup,AIBoss_C.Physics.ConstraintsGroup,AIBoss_C.Rendering.TextureStreaming,AIBoss_C.Rendering.LOD,
 PhysicsBallBP_C=
 BP_Sky_Sphere_C=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,NavMeshBoundsVolume.Collision.Collision,FastieBoss_C.Rendering.TextureStreaming,FastieBoss_C.Rendering.LOD,FastieBoss_C.Physics.ConstraintsGroup,
 Bomb_C=
-K2Node_VariableGet=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,NavMeshBoundsVolume.Collision.Collision,FastieBoss_C.Rendering.TextureStreaming,FastieBoss_C.Rendering.LOD,FastieBoss_C.Physics.ConstraintsGroup,
-PropertyWrapper=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,NavMeshBoundsVolume.Collision.Collision,FastieBoss_C.Rendering.TextureStreaming,FastieBoss_C.Rendering.LOD,FastieBoss_C.Physics.ConstraintsGroup,
+K2Node_VariableGet=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,NavMeshBoundsVolume.Collision.Collision,FastieBoss_C.Rendering.TextureStreaming,FastieBoss_C.Rendering.LOD,FastieBoss_C.Physics.ConstraintsGroup,AIBoss_C.Physics.ConstraintsGroup,AIBoss_C.Rendering.TextureStreaming,AIBoss_C.Rendering.LOD,K2Node_VariableGet.DefaultValueCategory.None,
+PropertyWrapper=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,NavMeshBoundsVolume.Collision.Collision,FastieBoss_C.Rendering.TextureStreaming,FastieBoss_C.Rendering.LOD,FastieBoss_C.Physics.ConstraintsGroup,AIBoss_C.Physics.ConstraintsGroup,AIBoss_C.Rendering.TextureStreaming,AIBoss_C.Rendering.LOD,K2Node_VariableGet.DefaultValueCategory.None,
 HomingTurret_C=
 Spin3_C=StaticMeshComponent.Collision.Collision,
 BossAI_C=
-K2Node_VariableSet=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,NavMeshBoundsVolume.Collision.Collision,FastieBoss_C.Rendering.TextureStreaming,FastieBoss_C.Rendering.LOD,FastieBoss_C.Physics.ConstraintsGroup,
+K2Node_VariableSet=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,NavMeshBoundsVolume.Collision.Collision,FastieBoss_C.Rendering.TextureStreaming,FastieBoss_C.Rendering.LOD,FastieBoss_C.Physics.ConstraintsGroup,AIBoss_C.Physics.ConstraintsGroup,AIBoss_C.Rendering.TextureStreaming,AIBoss_C.Rendering.LOD,Character.Physics.ConstraintsGroup,Character.Rendering.TextureStreaming,Character.Rendering.LOD,
 OLDBOSS_C=
 ai_mycontroller_C=StaticMeshComponent.Collision.Collision,
 CapsuleComponent=
-PlayerStart=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
+PlayerStart=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,NavMeshBoundsVolume.Collision.Collision,FastieBoss_C.Rendering.TextureStreaming,FastieBoss_C.Rendering.LOD,FastieBoss_C.Physics.ConstraintsGroup,AIBoss_C.Physics.ConstraintsGroup,AIBoss_C.Rendering.TextureStreaming,AIBoss_C.Rendering.LOD,
 Wall_C=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,NavMeshBoundsVolume.Collision.Collision,FastieBoss_C.Rendering.TextureStreaming,FastieBoss_C.Rendering.LOD,FastieBoss_C.Physics.ConstraintsGroup,
-Actor=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
+Actor=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,NavMeshBoundsVolume.Collision.Collision,FastieBoss_C.Rendering.TextureStreaming,FastieBoss_C.Rendering.LOD,FastieBoss_C.Physics.ConstraintsGroup,
 Jump_C=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 InterpToMovementComponent=
 Platform_C=
 Waypoints_C=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,NavMeshBoundsVolume.Collision.Collision,
 Platform_2_C=
 BillboardComponent=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
-GoodBomb_C=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,NavMeshBoundsVolume.Collision.Collision,FastieBoss_C.Rendering.TextureStreaming,FastieBoss_C.Rendering.LOD,FastieBoss_C.Physics.ConstraintsGroup,
-BrushComponent=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,NavMeshBoundsVolume.Collision.Collision,
+GoodBomb_C=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,NavMeshBoundsVolume.Collision.Collision,FastieBoss_C.Rendering.TextureStreaming,FastieBoss_C.Rendering.LOD,FastieBoss_C.Physics.ConstraintsGroup,AIBoss_C.Physics.ConstraintsGroup,AIBoss_C.Rendering.TextureStreaming,AIBoss_C.Rendering.LOD,K2Node_VariableGet.DefaultValueCategory.None,
+BrushComponent=
 Ground_C=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,NavMeshBoundsVolume.Collision.Collision,
 PawnSensingComponent=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 NavMeshBoundsVolume=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,NavMeshBoundsVolume.Collision.Collision,
@@ -2223,7 +2232,7 @@ FastBoss_C=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueC
 SlowBoss_C=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,NavMeshBoundsVolume.Collision.Collision,FastieBoss_C.Rendering.TextureStreaming,FastieBoss_C.Rendering.LOD,FastieBoss_C.Physics.ConstraintsGroup,
 NormalBoss_C=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,NavMeshBoundsVolume.Collision.Collision,FastieBoss_C.Rendering.TextureStreaming,FastieBoss_C.Rendering.LOD,FastieBoss_C.Physics.ConstraintsGroup,
 CarelessBoss_C=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,NavMeshBoundsVolume.Collision.Collision,FastieBoss_C.Rendering.TextureStreaming,FastieBoss_C.Rendering.LOD,FastieBoss_C.Physics.ConstraintsGroup,
-Character=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,NavMeshBoundsVolume.Collision.Collision,FastieBoss_C.Rendering.TextureStreaming,FastieBoss_C.Rendering.LOD,FastieBoss_C.Physics.ConstraintsGroup,Character.Physics.ConstraintsGroup,Character.Rendering.TextureStreaming,Character.Rendering.LOD,
-AIBoss_C=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,NavMeshBoundsVolume.Collision.Collision,FastieBoss_C.Rendering.TextureStreaming,FastieBoss_C.Rendering.LOD,FastieBoss_C.Physics.ConstraintsGroup,
+Character=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,NavMeshBoundsVolume.Collision.Collision,FastieBoss_C.Rendering.TextureStreaming,FastieBoss_C.Rendering.LOD,FastieBoss_C.Physics.ConstraintsGroup,Character.Physics.ConstraintsGroup,Character.Rendering.TextureStreaming,Character.Rendering.LOD,AIBoss_C.Physics.ConstraintsGroup,AIBoss_C.Rendering.TextureStreaming,AIBoss_C.Rendering.LOD,
+AIBoss_C=
 RecastNavMesh=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,NavMeshBoundsVolume.Collision.Collision,FastieBoss_C.Rendering.TextureStreaming,FastieBoss_C.Rendering.LOD,FastieBoss_C.Physics.ConstraintsGroup,
 
