--- a/Unreal Projects/ToyCars/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal Projects/ToyCars/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -384,13 +384,13 @@ PlayerStart.Input=True
 PlayerStart.Actor=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/VehicleAdv/Vehicle/WheelData/Vehicle_FrontTireConfig
-MRUItem1=/Game/VehicleAdvBP/Blueprints/WheelData/WheelFront
-MRUItem2=/Game/VehicleAdvBP/Blueprints/WheelData/Vehicle_BackTireDrift
-MRUItem3=/Game/VehicleAdvBP/Blueprints/WheelData/WheelBack
-MRUItem4=/Game/VehicleAdvBP/Blueprints/WheelData/WheelBackDrift
-MRUItem5=/Game/VehicleAdv/Vehicle/WheelData/Vehicle_BackTireConfig
-MRUItem6=/Game/VehicleAdvBP/Blueprints/VehicleBlueprint
+MRUItem0=/Game/VehicleAdvBP/Blueprints/WheelData/Vehicle_BackTireDrift
+MRUItem1=/Game/VehicleAdv/Vehicle/WheelData/Vehicle_FrontTireConfig
+MRUItem2=/Game/VehicleAdvBP/Blueprints/WheelData/WheelBack
+MRUItem3=/Game/VehicleAdvBP/Blueprints/WheelData/WheelFront
+MRUItem4=/Game/VehicleAdvBP/Blueprints/VehicleBlueprint
+MRUItem5=/Game/VehicleAdvBP/Blueprints/WheelData/WheelBackDrift
+MRUItem6=/Game/VehicleAdv/Vehicle/WheelData/Vehicle_BackTireConfig
 
 [AssetEditorToolkitTabLocation]
 /Game/VehicleAdvBP/Blueprints/VehicleBlueprint.VehicleBlueprint=0
@@ -1275,7 +1275,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [DetailCustomWidgetExpansion]
-SkeletalMeshComponent=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,
+SkeletalMeshComponent=
 VehicleBlueprint_C=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,
 K2Node_VariableGet=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,
 PropertyWrapper=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,
@@ -1300,16 +1300,30 @@ Blueprint.ClassOptions=True
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-WheeledVehicleMovementComponent4W="\"Object.MechanicalSetup.TransmissionSetup\" \"Object.VehicleSetup.WheelSetups\" \"Object.VehicleSetup.WheelSetups.WheelSetups[0]\" \"Object.VehicleSetup.WheelSetups.WheelSetups[1]\" \"Object.VehicleSetup.WheelSetups.WheelSetups[2]\" \"Object.VehicleSetup.WheelSetups.WheelSetups[3]\" \"Object.VehicleInput.SteeringInputRate\" \"Object.NavMovement.NavAgentProps\" "
-WheeledVehicleMovementComponent="\"Object.MechanicalSetup.TransmissionSetup\" \"Object.VehicleSetup.WheelSetups\" \"Object.VehicleSetup.WheelSetups.WheelSetups[0]\" \"Object.VehicleSetup.WheelSetups.WheelSetups[1]\" \"Object.VehicleSetup.WheelSetups.WheelSetups[2]\" \"Object.VehicleSetup.WheelSetups.WheelSetups[3]\" \"Object.VehicleInput.SteeringInputRate\" \"Object.NavMovement.NavAgentProps\" "
-PawnMovementComponent="\"Object.MechanicalSetup.TransmissionSetup\" \"Object.VehicleSetup.WheelSetups\" \"Object.VehicleSetup.WheelSetups.WheelSetups[0]\" \"Object.VehicleSetup.WheelSetups.WheelSetups[1]\" \"Object.VehicleSetup.WheelSetups.WheelSetups[2]\" \"Object.VehicleSetup.WheelSetups.WheelSetups[3]\" \"Object.VehicleInput.SteeringInputRate\" \"Object.NavMovement.NavAgentProps\" "
-NavMovementComponent="\"Object.MechanicalSetup.TransmissionSetup\" \"Object.VehicleSetup.WheelSetups\" \"Object.VehicleSetup.WheelSetups.WheelSetups[0]\" \"Object.VehicleSetup.WheelSetups.WheelSetups[1]\" \"Object.VehicleSetup.WheelSetups.WheelSetups[2]\" \"Object.VehicleSetup.WheelSetups.WheelSetups[3]\" \"Object.VehicleInput.SteeringInputRate\" \"Object.NavMovement.NavAgentProps\" "
-MovementComponent="\"Object.MechanicalSetup.TransmissionSetup\" \"Object.VehicleSetup.WheelSetups\" \"Object.VehicleSetup.WheelSetups.WheelSetups[0]\" \"Object.VehicleSetup.WheelSetups.WheelSetups[1]\" \"Object.VehicleSetup.WheelSetups.WheelSetups[2]\" \"Object.VehicleSetup.WheelSetups.WheelSetups[3]\" \"Object.VehicleInput.SteeringInputRate\" \"Object.NavMovement.NavAgentProps\" "
+WheeledVehicleMovementComponent4W="\"Object.MechanicalSetup.TransmissionSetup\" \"Object.VehicleSetup.WheelSetups\" \"Object.VehicleInput.SteeringInputRate\" \"Object.NavMovement.NavAgentProps\" "
+WheeledVehicleMovementComponent="\"Object.MechanicalSetup.TransmissionSetup\" \"Object.VehicleSetup.WheelSetups\" \"Object.VehicleInput.SteeringInputRate\" \"Object.NavMovement.NavAgentProps\" "
+PawnMovementComponent="\"Object.MechanicalSetup.TransmissionSetup\" \"Object.VehicleSetup.WheelSetups\" \"Object.VehicleInput.SteeringInputRate\" \"Object.NavMovement.NavAgentProps\" "
+NavMovementComponent="\"Object.MechanicalSetup.TransmissionSetup\" \"Object.VehicleSetup.WheelSetups\" \"Object.VehicleInput.SteeringInputRate\" \"Object.NavMovement.NavAgentProps\" "
+MovementComponent="\"Object.MechanicalSetup.TransmissionSetup\" \"Object.VehicleSetup.WheelSetups\" \"Object.VehicleInput.SteeringInputRate\" \"Object.NavMovement.NavAgentProps\" "
 ActorComponent=
-Object="\"Object.TireConfig.TireFrictionScales\" "
+Object=
 TireConfig="\"Object.TireConfig.TireFrictionScales\" "
 DataAsset="\"Object.TireConfig.TireFrictionScales\" "
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
+
+[/Script/UnrealEd.EditorLoadingSavingSettings]
+bSCCUseGlobalSettings=False
+bAutomaticallyCheckoutOnAssetModification=False
+AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
+bForceCompilationAtStartup=False
+bRestoreOpenAssetTabsOnRestart=False
+bMonitorContentDirectories=True
+AutoReimportThreshold=3.000000
+bAutoCreateAssets=True
+bAutoDeleteAssets=True
+bDetectChangesOnStartup=True
+bPromptBeforeAutoImporting=True
+bDeleteSourceFilesWithAssets=False
 
