--- a/Unreal Projects/ToyCars/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal Projects/ToyCars/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -71,7 +71,7 @@ PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
 AdditionalLaunchParametersForMobile=
-BuildGameBeforeLaunch=PlayOnBuild_Default
+BuildGameBeforeLaunch=PlayOnBuild_Never
 LaunchConfiguration=LaunchConfig_Default
 bAutoCompileBlueprintsOnLaunch=True
 bLaunchSeparateServer=False
@@ -158,6 +158,7 @@ LastLevel=/Game/VehicleAdvBP/Maps/VehicleAdvExampleMap
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/VehicleAdvBP/Blueprints/CarBP.CarBP
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -508,18 +509,40 @@ SkyLight.SkyLight=True
 SkyLight.Tags=True
 SkyLight.Cooking=True
 SkyLight.Actor=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.PhysicalMaterialMask=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.Tessellation=True
+PreviewMaterial.Group Sorting=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.ImportSettings=True
+MaterialExpressionHairColor.MaterialExpression=True
+MaterialExpressionConstant.MaterialExpressionConstant=True
+MaterialExpressionConstant.MaterialExpression=True
+MaterialExpressionConstant3Vector.MaterialExpressionConstant3Vector=True
+MaterialExpressionConstant3Vector.MaterialExpression=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/VehicleAdvBP/Blueprints/CarBP
-MRUItem1=/Game/VehicleAdvBP/Blueprints/NotBrokenCar
-MRUItem2=/Game/VehicleAdvBP/Blueprints/VehicleAdvGameMode
-MRUItem3=/Game/VehicleAdvBP/Blueprints/WheelData/Vehicle_BackTireDrift
-MRUItem4=/Game/VehicleAdv/Vehicle/WheelData/Vehicle_FrontTireConfig
-MRUItem5=/Game/VehicleAdvBP/Blueprints/WheelData/WheelBack
-MRUItem6=/Game/VehicleAdvBP/Blueprints/WheelData/WheelFront
-MRUItem7=/Game/VehicleAdvBP/Blueprints/VehicleBlueprint
-MRUItem8=/Game/VehicleAdvBP/Blueprints/WheelData/WheelBackDrift
-MRUItem9=/Game/VehicleAdv/Vehicle/WheelData/Vehicle_BackTireConfig
+MRUItem0=/Game/VehicleAdvBP/Blueprints/NotBrokenCar
+MRUItem1=/Game/VehicleAdvBP/Blueprints/Red
+MRUItem2=/Game/VehicleAdvBP/Blueprints/Black
+MRUItem3=/Game/VehicleAdvBP/Blueprints/CarBP
+MRUItem4=/Game/VehicleAdvBP/Blueprints/VehicleAdvGameMode
+MRUItem5=/Game/VehicleAdvBP/Blueprints/WheelData/Vehicle_BackTireDrift
+MRUItem6=/Game/VehicleAdv/Vehicle/WheelData/Vehicle_FrontTireConfig
+MRUItem7=/Game/VehicleAdvBP/Blueprints/WheelData/WheelBack
+MRUItem8=/Game/VehicleAdvBP/Blueprints/WheelData/WheelFront
+MRUItem9=/Game/VehicleAdvBP/Blueprints/VehicleBlueprint
+MRUItem10=/Game/VehicleAdvBP/Blueprints/WheelData/WheelBackDrift
+MRUItem11=/Game/VehicleAdv/Vehicle/WheelData/Vehicle_BackTireConfig
 
 [AssetEditorToolkitTabLocation]
 /Game/VehicleAdvBP/Blueprints/VehicleBlueprint.VehicleBlueprint=0
@@ -531,6 +554,9 @@ MRUItem9=/Game/VehicleAdv/Vehicle/WheelData/Vehicle_BackTireConfig
 /Game/VehicleAdvBP/Blueprints/WheelData/Vehicle_BackTireDrift.Vehicle_BackTireDrift=1
 /Game/VehicleAdvBP/Blueprints/VehicleAdvGameMode.VehicleAdvGameMode=0
 /Game/VehicleAdvBP/Blueprints/CarBP.CarBP=0
+/Game/VehicleAdvBP/Blueprints/NotBrokenCar.NotBrokenCar=0
+/Game/VehicleAdvBP/Blueprints/Black.Black=0
+/Game/VehicleAdvBP/Blueprints/Red.Red=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -569,7 +595,7 @@ CompileEventDisplayThresholdMs=5
 NodeTemplateCacheCapMB=20.000000
 
 [Directories2]
-UNR=../../../../../../Users/colli/Documents/Repos/Fall2021/Unreal Projects/ToyCars/Content/VehicleAdvBP/Maps
+UNR=../../../../../../Users/10840430/Documents/GitHub/Fall2021/Unreal Projects/ToyCars/Content/VehicleAdvBP/Maps
 BRUSH=../../../../../../Users/colli/Documents/Repos/Fall2021/Unreal Projects/ToyCars/Content/
 FBX=../../../../../../Users/colli/Documents/Repos/Fall2021/Unreal Projects/ToyCars/Content/
 FBXAnim=../../../../../../Users/colli/Documents/Repos/Fall2021/Unreal Projects/ToyCars/Content/
@@ -1399,6 +1425,8 @@ MovieSceneCapture.TimeStamp=2021.08.25-02.31.35
 MovieSceneCapture.LastCompileMethod=Unknown
 BlueprintGraph.TimeStamp=2021.08.25-02.31.28
 BlueprintGraph.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2021.08.23-23.23.12
+HierarchicalLODUtilities.LastCompileMethod=Unknown
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -1408,21 +1436,21 @@ OnlyBuildVisibility=False
 [DetailCustomWidgetExpansion]
 SkeletalMeshComponent=
 VehicleBlueprint_C=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,
-K2Node_VariableGet=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,K2Node_VariableGet.DefaultValueCategory.None,PropertyWrapper.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,
-PropertyWrapper=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,K2Node_VariableGet.DefaultValueCategory.None,
+K2Node_VariableGet=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,PropertyWrapper.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,PhysicsConstraintComponent.Angular Limits.Swing Limits,PhysicsConstraintComponent.Angular Limits.Twist Limits,PhysicsConstraintComponent.LinearMotor.Linear Position Drive,PhysicsConstraintComponent.LinearMotor.Linear Velocity Drive,PhysicsConstraintComponent.AngularMotor.Orientation Drive,PhysicsConstraintComponent.AngularMotor.Velocity Drive,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.None,
+PropertyWrapper=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,K2Node_VariableGet.DefaultValueCategory.None,PropertyWrapper.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,PhysicsConstraintComponent.Angular Limits.Swing Limits,PhysicsConstraintComponent.Angular Limits.Twist Limits,PhysicsConstraintComponent.LinearMotor.Linear Position Drive,PhysicsConstraintComponent.LinearMotor.Linear Velocity Drive,PhysicsConstraintComponent.AngularMotor.Orientation Drive,PhysicsConstraintComponent.AngularMotor.Velocity Drive,StaticMeshComponent.Collision.Collision,
 K2Node_VariableSet=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 WheeledVehicleMovementComponent=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,
-SceneComponent=PhysicsConstraintComponent.Angular Limits.Swing Limits,PhysicsConstraintComponent.Angular Limits.Twist Limits,PhysicsConstraintComponent.LinearMotor.Linear Position Drive,PhysicsConstraintComponent.LinearMotor.Linear Velocity Drive,PhysicsConstraintComponent.AngularMotor.Orientation Drive,PhysicsConstraintComponent.AngularMotor.Velocity Drive,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,K2Node_VariableGet.DefaultValueCategory.None,PropertyWrapper.DefaultValueCategory.None,
-BrushComponent=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,K2Node_VariableGet.DefaultValueCategory.None,PropertyWrapper.DefaultValueCategory.None,
+SceneComponent=
+BrushComponent=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,K2Node_VariableGet.DefaultValueCategory.None,PropertyWrapper.DefaultValueCategory.None,PhysicsConstraintComponent.Angular Limits.Swing Limits,PhysicsConstraintComponent.Angular Limits.Twist Limits,PhysicsConstraintComponent.LinearMotor.Linear Position Drive,PhysicsConstraintComponent.LinearMotor.Linear Velocity Drive,PhysicsConstraintComponent.AngularMotor.Orientation Drive,PhysicsConstraintComponent.AngularMotor.Velocity Drive,
 BP_Sky_Sphere_C=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,K2Node_VariableGet.DefaultValueCategory.None,PropertyWrapper.DefaultValueCategory.None,PhysicsConstraintComponent.Angular Limits.Swing Limits,PhysicsConstraintComponent.Angular Limits.Twist Limits,PhysicsConstraintComponent.LinearMotor.Linear Position Drive,PhysicsConstraintComponent.LinearMotor.Linear Velocity Drive,PhysicsConstraintComponent.AngularMotor.Orientation Drive,PhysicsConstraintComponent.AngularMotor.Velocity Drive,
-Brush=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,K2Node_VariableGet.DefaultValueCategory.None,PropertyWrapper.DefaultValueCategory.None,
+Brush=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,K2Node_VariableGet.DefaultValueCategory.None,PropertyWrapper.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,PhysicsConstraintComponent.Angular Limits.Swing Limits,PhysicsConstraintComponent.Angular Limits.Twist Limits,PhysicsConstraintComponent.LinearMotor.Linear Position Drive,PhysicsConstraintComponent.LinearMotor.Linear Velocity Drive,PhysicsConstraintComponent.AngularMotor.Orientation Drive,PhysicsConstraintComponent.AngularMotor.Velocity Drive,StaticMeshComponent.Collision.Collision,
 CapsuleComponent=
 PlayerStart=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,
-CarBP_C=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,K2Node_VariableGet.DefaultValueCategory.None,PropertyWrapper.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,PhysicsConstraintComponent.Angular Limits.Swing Limits,PhysicsConstraintComponent.Angular Limits.Twist Limits,PhysicsConstraintComponent.LinearMotor.Linear Position Drive,PhysicsConstraintComponent.LinearMotor.Linear Velocity Drive,PhysicsConstraintComponent.AngularMotor.Orientation Drive,PhysicsConstraintComponent.AngularMotor.Velocity Drive,StaticMeshComponent.Collision.Collision,
-StaticMeshComponent=
+CarBP_C=
+StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,
 BillboardComponent=PhysicsConstraintComponent.Angular Limits.Swing Limits,PhysicsConstraintComponent.Angular Limits.Twist Limits,PhysicsConstraintComponent.LinearMotor.Linear Position Drive,PhysicsConstraintComponent.LinearMotor.Linear Velocity Drive,PhysicsConstraintComponent.AngularMotor.Orientation Drive,PhysicsConstraintComponent.AngularMotor.Velocity Drive,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,K2Node_VariableGet.DefaultValueCategory.None,PropertyWrapper.DefaultValueCategory.None,
 PhysicsConstraintComponent=PhysicsConstraintComponent.Angular Limits.Swing Limits,PhysicsConstraintComponent.Angular Limits.Twist Limits,PhysicsConstraintComponent.LinearMotor.Linear Position Drive,PhysicsConstraintComponent.LinearMotor.Linear Velocity Drive,PhysicsConstraintComponent.AngularMotor.Orientation Drive,PhysicsConstraintComponent.AngularMotor.Velocity Drive,
-NotBrokenCar_C=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,K2Node_VariableGet.DefaultValueCategory.None,PropertyWrapper.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,
+NotBrokenCar_C=
 BoxComponent=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,K2Node_VariableGet.DefaultValueCategory.None,PropertyWrapper.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,PhysicsConstraintComponent.Angular Limits.Swing Limits,PhysicsConstraintComponent.Angular Limits.Twist Limits,PhysicsConstraintComponent.LinearMotor.Linear Position Drive,PhysicsConstraintComponent.LinearMotor.Linear Velocity Drive,PhysicsConstraintComponent.AngularMotor.Orientation Drive,PhysicsConstraintComponent.AngularMotor.Velocity Drive,StaticMeshComponent.Collision.Collision,
 Landscape=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,K2Node_VariableGet.DefaultValueCategory.None,PropertyWrapper.DefaultValueCategory.None,
 
@@ -1449,15 +1477,15 @@ ActorComponent=
 Object=
 TireConfig="\"Object.TireConfig.TireFrictionScales\" "
 DataAsset="\"Object.TireConfig.TireFrictionScales\" "
-CarBP_C=
-Pawn=
-StaticMeshComponent=
-MeshComponent=
-PrimitiveComponent=
+CarBP_C="\"Object.TurnAmount\" "
+Pawn="\"Object.TurnAmount\" "
+StaticMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+MeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+PrimitiveComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 SceneComponent=
 PhysicsConstraintComponent="\"Object.Constraint.ComponentName1\" \"Object.Constraint.ComponentName2\" "
 BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-NotBrokenCar_C=
+NotBrokenCar_C="\"Object.TurnAmount\" "
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
@@ -1484,4 +1512,67 @@ RecentlyPlaced=/Game/VehicleAdvBP/Blueprints/NotBrokenCar.NotBrokenCar;
 
 [MessageLog]
 LastLogListing=PIE
+
+[/Script/UnrealEd.MaterialEditorOptions]
+bShowGrid=False
+bHideUnrelatedNodes=False
+bUseUnsortedMenus=False
+
+[MaterialEditor]
+PrimType=1
+
+[/Script/UnrealEd.MaterialStatsOptions]
+bPlatformUsed[0]=1
+bPlatformUsed[1]=0
+bPlatformUsed[2]=0
+bPlatformUsed[3]=0
+bPlatformUsed[4]=0
+bPlatformUsed[5]=0
+bPlatformUsed[6]=0
+bPlatformUsed[7]=0
+bPlatformUsed[8]=0
+bPlatformUsed[9]=0
+bPlatformUsed[10]=0
+bPlatformUsed[11]=0
+bPlatformUsed[12]=0
+bPlatformUsed[13]=0
+bPlatformUsed[14]=0
+bPlatformUsed[15]=0
+bPlatformUsed[16]=0
+bPlatformUsed[17]=0
+bPlatformUsed[18]=0
+bPlatformUsed[19]=0
+bPlatformUsed[20]=0
+bPlatformUsed[21]=0
+bPlatformUsed[22]=0
+bPlatformUsed[23]=0
+bPlatformUsed[24]=0
+bPlatformUsed[25]=0
+bPlatformUsed[26]=0
+bPlatformUsed[27]=0
+bPlatformUsed[28]=0
+bPlatformUsed[29]=0
+bPlatformUsed[30]=0
+bPlatformUsed[31]=0
+bPlatformUsed[32]=0
+bPlatformUsed[33]=0
+bPlatformUsed[34]=0
+bPlatformUsed[35]=0
+bPlatformUsed[36]=0
+bPlatformUsed[37]=0
+bPlatformUsed[38]=0
+bPlatformUsed[39]=0
+bPlatformUsed[40]=0
+bPlatformUsed[41]=0
+bPlatformUsed[42]=0
+bPlatformUsed[43]=0
+bPlatformUsed[44]=0
+bPlatformUsed[45]=0
+bPlatformUsed[46]=0
+bPlatformUsed[47]=0
+bPlatformUsed[48]=0
+bMaterialQualityUsed[0]=0
+bMaterialQualityUsed[1]=1
+bMaterialQualityUsed[2]=0
+bMaterialQualityUsed[3]=0
 
